prod/sing-box/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sing-box
  labels:
    name: sing-box
