prod/sing-box/sing-box.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sing-box-deployment
  namespace: sing-box
  labels:
    app: sing-box
  annotations:
    operator.1password.io/item-path: "vaults/cake.nokiy.net/items/sing-box"
    operator.1password.io/item-name: "sing-box"
    operator.1password.io/auto-restart: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sing-box
  template:
    metadata:
      labels:
        app: sing-box
    spec:
      volumes:
        - name: rendered-config-volume
          emptyDir: {}
        - name: config-template-volume
          configMap:
            name: sing-box-config-template

      containers:
      - name: sing-box
        image: ghcr.io/sagernet/sing-box:v1.12.11
        ports:
        - containerPort: 443
        command: ["/usr/local/bin/sing-box", "run", "-c", "/etc/sing-box/config.json"]
        volumeMounts:
          - name: rendered-config-volume
            mountPath: /etc/sing-box
            readOnly: true
