prod/sing-box/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: sing-box
  namespace: sing-box
spec:
  selector:
    app: sing-box
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sing-box-ingress
  namespace: sing-box
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNIRegexp(`^.+\.hk$`)
      services:
        - name: sing-box
          port: 443
  tls:
    passthrough: true
